--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
 <!DOCTYPE html>
+<html lang="hu">
+<head>
+	
+	<meta charset="UTF-8">
+	
+	<title></title>
+    
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    
+  <meta name="format-detection" content="telephone=no">
+	<meta name="msapplication-tap-highlight" content="no">
+	
+	<link rel="stylesheet" href="src/style.css">
+	
+</head>
+<body>
+
+	
+	
+	<script src="src/mvc/controller.js"></script>
+	
+	<script src="src/mvc/view/app-view.js"></script>
+
+	<script src="src/script.js"></script>
+	
+</body>
+</html>
