--- a/index.html
+++ b/index.html
@@ -15,7 +15,38 @@
 	
 </head>
 <body>
+	
+	<div id="title-bar">
+		<h1>
+			<i class="fas fa-sticky-note"></i>
+			Rendelési Tételek
+		</h1>
+	</div>
+	
+	<div id="main">
+		<div class="inside">
+		</div>
+	</div>
 
+	<div id="navigation-bar">
+		<ul>
+			<li>
+				<a href="" title="Új tétel">
+					<i>Új tétel</i>
+				</a>
+			</li>
+			<li>
+				<a href="" title="Tételek listája">
+					<i>Tételek listája</i>
+				</a>
+			</li>
+			<li>
+				<a href="" title="Összesítés">
+					<i>Összesítés</i>
+				</a>
+			</li>
+		</ul>
+	</div>
 	
 	
 	<script src="src/mvc/controller.js"></script>
