--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 	<script src="src/mvc/controller.js"></script>
 	
 	<script src="src/mvc/view/app-view.js"></script>
+	<script src="src/mvc/view/summary-view.js"></script>
+	<script src="src/mvc/view/list-view.js"></script>
+	<script src="src/mvc/view/input-view.js"></script>
 
 	<script src="src/script.js"></script>
 	
