--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 	<script src="src/mvc/view/app-view.js"></script>
 	<script src="src/mvc/view/summary-view.js"></script>
 	<script src="src/mvc/view/list-view.js"></script>
+	<script src="src/mvc/view/list-item.js"></script>
 	<script src="src/mvc/view/input-view.js"></script>
 
 	<script src="src/script.js"></script>
