--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 	<meta charset="UTF-8">
 	
-	<title></title>
+	<title>Példa cím</title>
     
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     
@@ -51,12 +51,13 @@
 	
 	<script src="src/mvc/controller.js"></script>
 	
+	<script src="src/mvc/model/item-model.js"></script>
+	
 	<script src="src/mvc/view/app-view.js"></script>
 	<script src="src/mvc/view/summary-view.js"></script>
 	<script src="src/mvc/view/list-view.js"></script>
 	<script src="src/mvc/view/list-item.js"></script>
 	<script src="src/mvc/view/input-view.js"></script>
-
 	<script src="src/mvc/view/updateItem-view.js"></script>
 
 	<script src="src/script.js"></script>
