--- a/index.html
+++ b/index.html
@@ -16,11 +16,26 @@
 </head>
 <body>
 	
-	<div id="title-bar">
-		<h1>
-			<i class="fas fa-sticky-note"></i>
-			Rendelési Tételek
-		</h1>
+	
+
+	<div id="navigation-bar">
+		<ul>
+			<li>
+				<a href="" title="Új tétel">
+					Új kiadás
+				</a>
+			</li>
+			<li>
+				<a href="" title="Tételek listája">
+					Kiadások listája
+				</a>
+			</li>
+			<li>
+				<a href="" title="Összesítés">
+					Összesítés
+				</a>
+			</li>
+		</ul>
 	</div>
 	
 	<div id="main">
@@ -28,25 +43,7 @@
 		</div>
 	</div>
 
-	<div id="navigation-bar">
-		<ul>
-			<li>
-				<a href="" title="Új tétel">
-					<i>Új tétel</i>
-				</a>
-			</li>
-			<li>
-				<a href="" title="Tételek listája">
-					<i>Tételek listája</i>
-				</a>
-			</li>
-			<li>
-				<a href="" title="Összesítés">
-					<i>Összesítés</i>
-				</a>
-			</li>
-		</ul>
-	</div>
+	
 	
 	
 	<script src="src/mvc/controller.js"></script>
