--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 	<meta charset="UTF-8">
 	
-	<title>Példa cím</title>
+	<title>Havi Kiadások</title>
     
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     
